[gd_scene load_steps=8 format=2]

[ext_resource path="res://LizardGame/UI/ScoreScreen/ScoreScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 628.0
margin_bottom = 348.0
custom_constants/separation = 10

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 616.0

[node name="Separator3" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 10.0
margin_right = 616.0
margin_bottom = 10.0

[node name="LabelDuHaut" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 616.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "STATS"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 616.0
margin_bottom = 50.0
alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 224.0
margin_right = 327.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Enter your name : "
align = 1
valign = 1

[node name="PlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 331.0
margin_right = 391.0
margin_bottom = 10.0
mouse_filter = 2
custom_fonts/font = SubResource( 2 )
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1
max_length = 8
expand_to_text_length = true

[node name="Separator4" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 616.0
margin_bottom = 60.0

[node name="LabelDuBas" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 616.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "RETURN"
align = 1
valign = 1

[node name="Credits" type="Label" parent="."]
margin_left = 450.0
margin_top = 340.0
margin_right = 627.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 1 )
text = "To my son Gabriel RONSAIN BRETON"
align = 2
valign = 1

[connection signal="text_entered" from="MarginContainer/VBoxContainer/HBoxContainer/PlayerName" to="." method="_on_PlayerName_text_entered"]
